...
    <string name="info_text">It is a simple text-based debate project on the Internet that implements the structured approach to information needed to formalize the discussion. This is Ivan Trushin`s bachelor project, so don`t expect too much</string>
    <string name="main_dev_text">Main Dev</string>
    <string name="ui_designer_text">UI Designer</string>
    <string name="backend_dev_text">Backend</string>

    <!--  fragment_login  -->
    <string name="hint_emailAddress">Enter Your email address</string>
    <string name="editTextTextEmailAddress">johnDoe88@gmail.com</string>
    <string name="hint_password">Enter Your password</string>
    <string name="editTextTextPassword">12345Qwe</string>
    <string name="hint_username">Enter Your nickname</string>
    <string name="editTextTextPersonName">JohnDoe</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>

    <!--  fragment_settings  -->
    <string name="settings_day_night">Night mode</string>

    <!--  fragment_user  -->
...
