...
            android:autofillHints="find debate"
            android:hint="@string/debate_search">

        </EditText>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/debate_recycle"
            android:layout_width="0dp"
            android:layout_height="687dp"
            android:layout_marginTop="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
