...
        <variable
            name="vm"
            type="com.gedar0082.debater.viewmodel.DebateViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/one_debate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="false"
        android:elevation="0dp"
        android:orientation="vertical">
...
